EasyHook/DllImport.cs


    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetAddressOfReturnAddress(out IntPtr OutValue);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierBeginStackTrace(out IntPtr OutBackup);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierEndStackTrace(IntPtr OutBackup);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetCallingModule(out IntPtr OutValue);

    /*
        Debug helper API.
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgAttachDebugger();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgGetThreadIdByHandle(
        IntPtr InThreadHandle,
        out int OutThreadId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgGetProcessIdByHandle(
        IntPtr InProcessHandle,
        out int OutProcessId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgHandleToObjectName(
        IntPtr InNamedHandle,
        IntPtr OutNameBuffer,
        int InBufferSize,
        out int OutRequiredSize);


    /*
        Injection support API.
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RhInjectLibrary(
        int InTargetPID,
        int InWakeUpTID,
        int InInjectionOptions,
        string InLibraryPath_x86,
        string InLibraryPath_x64,
        IntPtr InPassThruBuffer,
        int InPassThruSize);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhIsX64Process(
        int InProcessId,
        out bool OutResult);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern bool RhIsAdministrator();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhGetProcessToken(int InProcessId, out IntPtr OutToken);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RtlInstallService(
        string InServiceName,
        string InExePath,
        string InChannelName);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RtlCreateSuspendedProcess(
       string InEXEPath,
       string InCommandLine,
        int InProcessCreationFlags,
       out int OutProcessId,
       out int OutThreadId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhWakeUpProcess();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RhInstallDriver(
       string InDriverPath,
       string InDriverName);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhInstallSupportDriver();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern bool RhIsX64System();



    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern IntPtr GacCreateContext();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern void GacReleaseContext(ref IntPtr RefContext);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern bool GacInstallAssembly(
        IntPtr InContext,
        string InAssemblyPath,
        string InDescription,
        string InUniqueID);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern bool GacUninstallAssembly(
        IntPtr InContext,
        string InAssemblyName,
        string InDescription,
        string InUniqueID);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int LhGetHookBypassAddress(IntPtr handle, out IntPtr address);
}

public static class NativeApi
{
    public const int MAX_HOOK_COUNT = 1024;
    public const int MAX_ACE_COUNT = 128;
    public readonly static bool Is64Bit = IntPtr.Size == 8;

    [DllImport("kernel32.dll")]
    internal static extern int GetCurrentThreadId();

    [DllImport("kernel32.dll")]
    internal static extern void CloseHandle(IntPtr InHandle);

    [DllImport("kernel32.dll")]
    internal static extern int GetCurrentProcessId();

    [DllImport("kernel32.dll", CharSet = CharSet.Ansi)]
    internal static extern IntPtr GetProcAddress(IntPtr InModule, string InProcName);

    [DllImport("kernel32.dll", CharSet = CharSet.Unicode)]
    internal static extern IntPtr LoadLibrary(string InPath);

    [DllImport("kernel32.dll", CharSet = CharSet.Unicode)]
    internal static extern IntPtr GetModuleHandle(string InPath);

    [DllImport("kernel32.dll")]
    internal static extern short RtlCaptureStackBackTrace(
        int InFramesToSkip,
        int InFramesToCapture,
        IntPtr OutBackTrace,
        IntPtr OutBackTraceHash);

    public const int STATUS_SUCCESS = unchecked(0);
    public const int STATUS_INVALID_PARAMETER = unchecked((int)0xC000000DL);
    public const int STATUS_INVALID_PARAMETER_1 = unchecked((int)0xC00000EFL);
    public const int STATUS_INVALID_PARAMETER_2 = unchecked((int)0xC00000F0L);
    public const int STATUS_INVALID_PARAMETER_3 = unchecked((int)0xC00000F1L);
    public const int STATUS_INVALID_PARAMETER_4 = unchecked((int)0xC00000F2L);
    public const int STATUS_INVALID_PARAMETER_5 = unchecked((int)0xC00000F3L);
    public const int STATUS_NOT_SUPPORTED = unchecked((int)0xC00000BBL);

    public const int STATUS_INTERNAL_ERROR = unchecked((int)0xC00000E5L);
    public const int STATUS_INSUFFICIENT_RESOURCES = unchecked((int)0xC000009AL);
    public const int STATUS_BUFFER_TOO_SMALL = unchecked((int)0xC0000023L);
    public const int STATUS_NO_MEMORY = unchecked((int)0xC0000017L);
    public const int STATUS_WOW_ASSERTION = unchecked((int)0xC0009898L);
    public const int STATUS_ACCESS_DENIED = unchecked((int)0xC0000022L);

    private static string ComposeString()
    {
        return string.Format("{0} (Code: {1})", RtlGetLastErrorString(), RtlGetLastError());
    }

    internal static void Force(int InErrorCode)
    {
        switch (InErrorCode)
        {
            case STATUS_SUCCESS: return;
            case STATUS_INVALID_PARAMETER: throw new ArgumentException("STATUS_INVALID_PARAMETER: " + ComposeString());
            case STATUS_INVALID_PARAMETER_1: throw new ArgumentException("STATUS_INVALID_PARAMETER_1: " + ComposeString());
            case STATUS_INVALID_PARAMETER_2: throw new ArgumentException("STATUS_INVALID_PARAMETER_2: " + ComposeString());
            case STATUS_INVALID_PARAMETER_3: throw new ArgumentException("STATUS_INVALID_PARAMETER_3: " + ComposeString());
            case STATUS_INVALID_PARAMETER_4: throw new ArgumentException("STATUS_INVALID_PARAMETER_4: " + ComposeString());
            case STATUS_INVALID_PARAMETER_5: throw new ArgumentException("STATUS_INVALID_PARAMETER_5: " + ComposeString());
            case STATUS_NOT_SUPPORTED: throw new NotSupportedException("STATUS_NOT_SUPPORTED: " + ComposeString());
            case STATUS_INTERNAL_ERROR: throw new EasyHookException("STATUS_INTERNAL_ERROR: " + ComposeString());
            case STATUS_INSUFFICIENT_RESOURCES: throw new InsufficientMemoryException("STATUS_INSUFFICIENT_RESOURCES: " + ComposeString());
            case STATUS_BUFFER_TOO_SMALL: throw new ArgumentException("STATUS_BUFFER_TOO_SMALL: " + ComposeString());
            case STATUS_NO_MEMORY: throw new EasyHookException("STATUS_NO_MEMORY: " + ComposeString());
            case STATUS_WOW_ASSERTION: throw new EasyHookException("STATUS_WOW_ASSERTION: " + ComposeString());
            case STATUS_ACCESS_DENIED: throw new AccessViolationException("STATUS_ACCESS_DENIED: " + ComposeString());

            default: throw new EasyHookException("Unknown error code (" + InErrorCode + "): " + ComposeString());
        }
    }

    public static int RtlGetLastError()
    {
        if (Is64Bit)
            return NativeApiX64.RtlGetLastError();
        else
            return NativeApiX86.RtlGetLastError();
    }

    public static string RtlGetLastErrorString()
    {
        if (Is64Bit)
            return NativeApiX64.RtlGetLastErrorStringCopy();
        else
            return NativeApiX86.RtlGetLastErrorStringCopy();
    }

    public static void LhUninstallAllHooks()
    {
        if (Is64Bit)
            NativeApiX64.LhUninstallAllHooks();
        else
            NativeApiX86.LhUninstallAllHooks();
    }

    public static void LhInstallHook(
        IntPtr InEntryPoint,
        IntPtr InHookProc,
        IntPtr InCallback,
        IntPtr OutHandle)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhInstallHook(InEntryPoint, InHookProc, InCallback, OutHandle));
        else
            Force(NativeApiX86.LhInstallHook(InEntryPoint, InHookProc, InCallback, OutHandle));
    }

    public static void LhUninstallHook(IntPtr RefHandle)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhUninstallHook(RefHandle));
        else
            Force(NativeApiX86.LhUninstallHook(RefHandle));
    }

    public static void LhWaitForPendingRemovals()
    {
        if (Is64Bit)
            Force(NativeApiX64.LhWaitForPendingRemovals());
        else
            Force(NativeApiX86.LhWaitForPendingRemovals());
    }

    public static void LhIsThreadIntercepted(
                IntPtr InHandle,
                int InThreadID,
                out bool OutResult)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhIsThreadIntercepted(InHandle, InThreadID, out OutResult));
        else
            Force(NativeApiX86.LhIsThreadIntercepted(InHandle, InThreadID, out OutResult));
    }

    public static void LhSetInclusiveACL(
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhSetInclusiveACL(InThreadIdList, InThreadCount, InHandle));
        else
            Force(NativeApiX86.LhSetInclusiveACL(InThreadIdList, InThreadCount, InHandle));
    }

    public static void LhSetExclusiveACL(
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhSetExclusiveACL(InThreadIdList, InThreadCount, InHandle));
        else
            Force(NativeApiX86.LhSetExclusiveACL(InThreadIdList, InThreadCount, InHandle));
    }

    public static void LhSetGlobalInclusiveACL(
                int[] InThreadIdList,
                int InThreadCount)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhSetGlobalInclusiveACL(InThreadIdList, InThreadCount));
        else
            Force(NativeApiX86.LhSetGlobalInclusiveACL(InThreadIdList, InThreadCount));
    }

    public static void LhSetGlobalExclusiveACL(
                int[] InThreadIdList,
                int InThreadCount)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhSetGlobalExclusiveACL(InThreadIdList, InThreadCount));
        else
            Force(NativeApiX86.LhSetGlobalExclusiveACL(InThreadIdList, InThreadCount));
    }

    public static void LhBarrierGetCallingModule(out IntPtr OutValue)
    {
        if (Is64Bit)
            Force(NativeApiX64.LhBarrierGetCallingModule(out OutValue));
        else
            Force(NativeApiX86.LhBarrierGetCallingModule(out OutValue));
    }
